# starfighters

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  null.cpp
src/gfx/: CMakeLists.txt  mesh.cpp  mesh.h  renderer.cpp  renderer.h
src/gmpl/: CMakeLists.txt  camera.h  entity.cpp  entity.h  scene.cpp  scene.h
src/math/: CMakeLists.txt  matrix4x4.cpp  matrix4x4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
src/window/: CMakeLists.txt  sprite.cpp  sprite.h  window.cpp  window.h
